--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;400;500;600;700&family=Source+Sans+Pro:wght@300;400;600&family=Train+One&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;400;500;600;700&family=Source+Sans+Pro:wght@300;400;600;700;900&family=Train+One&display=swap"
     rel="stylesheet">
 
 </head>
